Link to "getting started with Migrations" has been updated
The string "http://truffleframework.com/tutorials/" appended to "docs/getting_started/migrations" making an invalid URL causing it to return 404 Error.
Actual path is "http://truffleframework.com/docs/getting_started/migrations"

--- a/tutorials/pet-shop.html
+++ b/tutorials/pet-shop.html
@@ -314,7 +314,7 @@ Writing artifacts to ./build/contracts
 <h3><a name="migration" class="anchor" href="#migration"><span class="header-link" style="z-index: 9999999683">&nbsp;</span></a>Migration</h3><p>Now that we&#39;ve successfully compiled our contracts, it&#39;s time to migrate them to the blockchain!</p>
 <p><strong>A migration is a deployment script meant to alter the state of your application&#39;s contracts</strong>, moving it from one state to the next. For the first migration, you might just be deploying new code, but over time, other migrations might move data around or replace a contract with a new one.</p>
 <p class="alert alert-info">
-  <strong>Note</strong>: Read more about <a href="docs/getting_started/migrations">migrations</a> in the Truffle documentation.
+  <strong>Note</strong>: Read more about <a href="../docs/getting_started/migrations">migrations</a> in the Truffle documentation.
 </p>
 
 <p>You&#39;ll see one JavaScript file already in the <code>/migrations</code> directory: <code>1_initial_migration.js</code>. This handles deploying the <code>Migrations.sol</code> contract to observe subsequent smart contract migrations, and ensures we don&#39;t double-migrate unchanged contracts in the future.</p>
